@@ -1,3 +1,7 @@
+2019-11-20 Wiley E. Hill <wileyhill@gmail.com>
+
+    * src/x_toolbars.c: Rename callback functions without capitalization.
+
 2019-11-19 Wiley E. Hill <wileyhill@gmail.com>
 
     * src/gtksheet/gtksheet.c: Refomat documentation, add ancillary GdkGC in
